inint 2